# AutoApply

./: .gitignore  Resume.md  UserOnboarding.py  main.py  package-lock.json  pyproject.toml  requirements.txt
ProjectSetup/project_setup/: index.html  package-lock.json  package.json
ProjectSetup/project_setup/src/: App.jsx  index.css
ProjectSetup/project_setup/src/components/: AppShell.jsx
ProjectSetup/project_setup/src/context/: AuthContext.jsx
ProjectSetup/project_setup/src/pages/: Dashboard.jsx  Login.jsx  Settings.jsx
